[package]
name = "smik-buttons"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Richard Neumann <neumann@paulmann.de>"]
description = "Detect button events of the smik board."
repository = "https://github.com/paulmannlighting/smik-butons"

[dependencies]
evdev = "0.12.2"
log = "0.4.22"
ringbuffer = "0.15.0"
